tests/expectations/parser-statement/statement/conditional_fail.out
Error [EPAR0370047]: expected {
    --> test_0:1:17
     |
   1 | if true {} else let x = 2;
     |                 ^^^
